--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "QazLingo"
+rootProject.name = "Qazlingo_diploma"
 include ':app'
